--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 .card {
   width: 20%;
   height: 20%;
-  background-color: lightblue;
+  background-color: lightgreen;
   border-radius: 2em;
  
   padding: 1em;
